After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795973 - [PATCH] Fix a spurious fall-through in switch statement in cddb_dialog.c log_message_from_request_error()
[PATCH] Fix a spurious fall-through in switch statement in cddb_dialog.c log_...
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
master
Other Linux
: Normal normal
: 2.4
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-05-09 14:24 UTC by Rok Mandeljc
Modified: 2018-05-09 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the presented issue (905 bytes, patch)
2018-05-09 14:24 UTC, Rok Mandeljc
committed Details | Review

Description Rok Mandeljc 2018-05-09 14:24:41 UTC
Created attachment 371843 [details] [review]
Patch for the presented issue

In log_message_from_request_error() in cddb_dialog.c, there's a fall-through in the switch statement that is likely unintended (because it overwrites the error message and causes a memory leak).

Discovered due to a warning about implicit fall-through under gcc 7.1 and warnings being treated as errors...
Comment 1 David King 2018-05-09 15:26:07 UTC
Review of attachment 371843 [details] [review]:

Thanks for the patch, I pushed it to master as commit 7e313d2715ac29d6f8fa6c6ad60d2c0cc64a6ebe.