Fix a spurious fall-through in switch statement

Discovered by gcc's warning about implicit fall-through.

https://bugzilla.gnome.org/show_bug.cgi?id=795973